--- a/src/client/scss/vmware/components/carousel-standard.scss
+++ b/src/client/scss/vmware/components/carousel-standard.scss
@@ -86,9 +86,10 @@ $carousel-indicator-padding: 40px;
 }
 
 .CarouselStandard-section {
-    .container{
+    .container {
         max-width: 1280px !important;
     }
+
     .carousel-standard {
         .container {
             >p {
@@ -145,10 +146,11 @@ $carousel-indicator-padding: 40px;
         padding: 100px 0 !important;
 
         .carousel-inner {
-           max-width: 80%;
-           margin: 0 auto;
+            max-width: 80%;
+            margin: 0 auto;
         }
-        .content-block{
+
+        .content-block {
             text-align: center;
         }
     }
@@ -186,8 +188,9 @@ $carousel-indicator-padding: 40px;
 
     .featured-card-control {
         display: flex;
-        gap: 20px;
-        margin-top: 20px;
+        gap: 30px;
+        align-items: center;
+        margin-top: 16px;
     }
 
     .carousel-control-prev {
@@ -203,24 +206,133 @@ $carousel-indicator-padding: 40px;
     }
 
     .carousel-control-next-icon {
-        width: 60px;
-        height: 60px;
-        min-width: 56px;
+        max-width: 56px;
+        height: 56px;
+        width: 100%;
         background: 50% / 100% 100% no-repeat;
         background-image: url("data:image/svg+xml,%3Csvg width='59' height='58' viewBox='0 0 59 58' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='29.5' cy='29' r='28' stroke='%231D428A' stroke-width='1.5'/%3E%3Cpath d='M26.5835 17.917L36.4129 27.9334C37.307 28.8446 37.307 30.3222 36.4129 31.2333L26.5835 41.2503V41.2503' stroke='%231D428A' stroke-linecap='round'/%3E%3Cpath d='M26 40.667L36.5 29.5837L26 18.5003' stroke='%231D428A' stroke-width='5' stroke-linecap='round'/%3E%3C/svg%3E%0A") !important;
     }
 
     .carousel-control-prev-icon {
-        width: 60px;
-        height: 60px;
-        min-width: 56px;
+        max-width: 56px;
+        height: 56px;
+        width: 100%;
         background: 50% / 100% 100% no-repeat;
         background-image: url("data:image/svg+xml,%3Csvg width='59' height='58' viewBox='0 0 59 58' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='28' cy='28' r='28' transform='matrix(-1 0 0 1 57.5 1)' stroke='%231D428A' stroke-width='1.5'/%3E%3Cpath d='M33 18.5L22.5 29.5833L33 40.6667' stroke='%231D428A' stroke-width='5' stroke-linecap='round'/%3E%3C/svg%3E%0A") !important;
+    }
+
+    .CarouselSplit {
+        .featured-card {
+            max-width: 384px;
+            width: 100%;
+            padding: 0%;
+
+
+            .ImageCard {
+                max-width: 384px;
+                width: 100%;
+
+                .card-title {
+                    font-size: 32px;
+                    font-weight: 400;
+                    color: black;
+                    margin-bottom: 20px;
+                }
+
+                .card-footer {
+                    padding-left: 0;
+
+                    .cb-cta-link {
+                        justify-content: flex-start !important;
+
+                        .lnk,
+                        .card-link {
+                            @extend .bttn;
+                            @include primary-button;
+
+
+
+                        }
+
+                    }
+                }
+
+            }
+        }
+
+        .carousel-item {
+            .ContentCard {
+                .ImageCard {
+                    max-width: 396px;
+                    width: 100%;
+
+                    .card-body {
+                        .card-title {
+                            font-size: 25px;
+                            font-weight: 400;
+                        }
+                    }
+                }
+            }
+        }
     }
 }
 
 .CarouselFeatured-section {
     .container {
         max-width: 1280px !important;
+    }
+}
+
+.CarouselFeatured {
+    .featured-card {
+        .ImageCard {
+            max-width: 290px;
+            width: 100%;
+            box-shadow: 0 4px 14px 0 rgba(17, 69, 134, 0.10);
+            padding-bottom: 29px;
+
+            .card-body {
+                padding: 0;
+
+                img {
+                    max-width: 290px;
+                    width: 100%;
+                    height: 145px;
+                    object-fit: cover;
+                }
+
+                .card-title {
+                    padding: 16px 29px 18px;
+                    font-size: 25px;
+                    font-weight: 300;
+                    color: $color-ocean-700;
+
+                    &:hover {
+                        text-decoration: underline;
+                    }
+                }
+            }
+
+            .cb-cta-link {
+                margin-left: 29px;
+
+                .card-footer {
+                    .lnk {
+                        font-size: 16px;
+                        text-transform: capitalize;
+
+
+
+                        &:hover {
+                            border: none;
+                            border-bottom: 1px solid $color-ocean-700 ;
+                        }
+                    }
+                }
+            }
+
+
+        }
     }
 }
