--- a/src/client/scss/vmware/templates/horizontal-tab.scss
+++ b/src/client/scss/vmware/templates/horizontal-tab.scss
@@ -56,6 +56,7 @@
                 position: relative;
                 border-bottom: 1px solid $color-primary;
                 margin: 0px 0px;
+                text-transform: capitalize;
 
                 &:after {
                     content: unset !important;
